--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT = 5000
-MONGODB_URL=mongodb://localhost:27017/cybercrime
+MONGODB_URL=mongodb+srv://CyberInitiative:cybersecure4321@cybersecurity.j19oglr.mongodb.net/?appName=Cybersecurity
 ADMIN_SECRET_KEY=CyberInitiative@2026
 JWT_SECRET= cybersecure4321@2026
